# e-Paper-study

RaspberryPi_JetsonNano/c/: CMakeLists.txt  Makefile  textfile  textfile.cpp
RaspberryPi_JetsonNano/c/examples/: EPD_7in5_V2_test.cpp
RaspberryPi_JetsonNano/c/lib/GUI/: GUI_Paint.c  GUI_Paint_pp.cpp  GUI_Paint_pp.hpp
RaspberryPi_JetsonNano/c/lib/e-Paper/: EPD_7in5_V2.c
RaspberryPi_JetsonNano/python/examples/: epd_7in5_V2_test.py
